Add reliable computation